tried to fix the systemd service that starts playerctld
info:
  Profile: default
  Gen: 215 -> 216
  NixOs: 24.05.20240427.58a1abd
  Kernel: 6.6.28

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,8 @@ make sure that /persist/nixos has the correct perms
     chmod -R 770 /persist/nixos
 
 
+# some bth service
+https://github.com/EzequielRamis/dotfiles/blob/ecfe6f269339d1551768b9158c1d3aee2d82b238/home/timers.nix#L19
+
+
+
