dec black max line length, worked on eww
info:
  Profile: laptop
  Gen: 8 -> 9
  NixOs: 24.05.20240511.062ca2a
  Kernel: 6.6.30

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,4 +7,9 @@ make sure that /persist/nixos has the correct perms
 https://github.com/EzequielRamis/dotfiles/blob/ecfe6f269339d1551768b9158c1d3aee2d82b238/home/timers.nix#L19
 
 
+# change user shell whithout root
+https://github.com/viperML/noshell
+
+# 
+
 
