--- a/TODO.txt
+++ b/TODO.txt
@@ -13,3 +13,9 @@ https://github.com/viperML/noshell
 # 
 
 
+Virtulisation
+    https://github.com/massgravel/Microsoft-Activation-Scripts
+    https://github.com/ChrisTitusTech/winutil
+
+
+
