added a openssh module
info:
  Profile: laptop
  Gen: 58 -> 59
  NixOs: 24.11.20240529.ad57eef
  Kernel: 6.6.32

--- a/TODO.txt
+++ b/TODO.txt
@@ -13,6 +13,9 @@ https://github.com/viperML/noshell
 # 
 
 
+possibly add pueued
+
+
 Virtulisation
     https://github.com/massgravel/Microsoft-Activation-Scripts
     https://github.com/ChrisTitusTech/winutil
