use sops for keys
info:
  Profile: default
  Gen: 358 -> 359
  NixOs: 24.11.20240622.a71e967
  Kernel: 6.6.35

--- a/TODO.txt
+++ b/TODO.txt
@@ -17,6 +17,11 @@ Virtulisation
     https://github.com/ChrisTitusTech/winutil
 
 
+https://github.com/workflow/dotfiles/blob/main/nix/default.nix
+
+backups
+    https://github.com/notohh/snowflake/blob/master/hosts/ame/services/restic.nix
+    
 prelockd
 
 add nix sops
