try to not use a symlink for steam
info:
  Profile: upinix-pc
  Gen: 399 -> 400
  NixOs: 24.11.20240622.a71e967
  Kernel: 6.6.35

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,8 @@ Virtulisation
     https://github.com/massgravel/Microsoft-Activation-Scripts
     https://github.com/ChrisTitusTech/winutil
 
+https://github.com/Misterio77/nix-starter-configs
+    some nix settings
 
 also update the iso flake on "qs update"
 
