fix the full installer
info:
  Profile: upinix-pc
  Gen: 426 -> 427
  NixOs: 24.11.20240703.9f4128e
  Kernel: 6.6.36

--- a/TODO.txt
+++ b/TODO.txt
@@ -55,9 +55,16 @@ nixd (language server)
 
 
 just?
+    no, use debshells insted
 
 
 posible change my_lib to lib.c (or smt simular)
 
 
 make cn-bth into just an alias?
+
+
+Lix? 
+    eg raf uses it
+    
+    or maybe just nix-super?
