added keys for all hosts
info:
  Profile: upinix-pc
  Gen: 429 -> 430
  NixOs: 24.11.20240703.9f4128e
  Kernel: 6.6.36

--- a/TODO.txt
+++ b/TODO.txt
@@ -72,3 +72,8 @@ Lix?
 
 move /persist/home to /persist/system/home
 
+
+the "full-installer-x86_64" should probably be a recovery thing
+or an iso for servers 
+
+
