move /persist/home to /persist/system/home
info:
  Profile: upinix-pc
  Gen: 430 -> 431
  NixOs: 24.11.20240703.9f4128e
  Kernel: 6.6.36

--- a/TODO.txt
+++ b/TODO.txt
@@ -58,6 +58,9 @@ just?
     no, use debshells insted
 
 
+nushell
+
+
 posible change my_lib to lib.c (or smt simular)
 
 
@@ -68,9 +71,6 @@ Lix?
     eg raf uses it
     
     or maybe just nix-super?
-
-
-move /persist/home to /persist/system/home
 
 
 the "full-installer-x86_64" should probably be a recovery thing
