worked on the installe
info:
  Profile: upinix-pc
  Gen: 530 -> 531
  NixOs: 24.11.20240731.9f918d6
  Kernel: 6.6.43

--- a/TODO.txt
+++ b/TODO.txt
@@ -21,6 +21,8 @@ add pueued
 
 use nixos-render-docs to create docs for this repo 
 
+fix ethernet getting stuck on reconnect:
+  enp12s0: connecting (getting IP configuration) to Wired connection 1
 
 Virtulisation
     MAS
