add google as a alias in firefox
info:
  Profile: upinix-pc
  Gen: 585 -> 586
  NixOs: 24.11.20240804.cb9a96f
  Kernel: 6.6.44

--- a/TODO.txt
+++ b/TODO.txt
@@ -75,7 +75,7 @@ zoxide
 tmux
 
 
-himach
+himachi
     for fake lan 
 
     could probalby do this with homelab too
@@ -154,6 +154,3 @@ nvim
     nixd (language server)
 
     quick fix buffer?
-
-vvvvv does this mean? vvvvv
-Generalise the method that I create the vendors config file
