--- a/TODO.txt
+++ b/TODO.txt
@@ -1,23 +1,25 @@
-auto connect to bth
-    https://github.com/EzequielRamis/dotfiles/blob/ecfe6f269339d1551768b9158c1d3aee2d82b238/home/timers.nix#L19
+nix 
+    Lix? 
+        eg raf uses it
+        
+        or maybe just nix-super?
+
+    use nixos-render-docs to create docs for this repo 
+
+    improve nix settings
+        https://github.com/Misterio77/nix-starter-configs
+
+    automated deployments? 
+        hydra?
+
+    posibly change my_lib to lib.c (or smt similar)
+
+    add a way to do only home-manager 
+
+    Index the nixos server for better searching
+        https://github.com/Tyrrrz/DiscordChatExporter?tab=readme-
 
 
-more declarative secrets
-    this guy has a lot: 
-        https://github.com/alyraffauf/nixcfg/tree/master/secrets
-
-prelockd
-    prevent freezes in low ram senarios
-
-add pueued
-    ask lokegustafsson for his pkg
-    prevent freezes in low ram senarios
-
-
-use nixos-render-docs to create docs for this repo 
-
-fix ethernet getting stuck on reconnect:
-  enp12s0: connecting (getting IP configuration) to Wired connection 1
 
 Virtulisation
     MAS
@@ -30,16 +32,6 @@ Virtulisation
         https://discord.com/channels/568306982717751326/1257693396173328468/1257701485568065557
     
     scripts to auto setup vm
-
-
-https://github.com/Misterio77/nix-starter-configs
-    some nix settings
-
-
-encrypted filesystem
-    LUKS
-
-    auto login?
 
 
 Home lab
@@ -55,71 +47,6 @@ Home lab
     vpn
 
     plex
-    
-store firefox extension data?
-    since you cant set the settings declaritivly
-
-    add a command to place these into the repo?
-
-
-optimise for battery
-   
-
-zoxide
-
-
-tmux
-
-
-himachi
-    for fake lan 
-
-    could probalby do this with homelab too
-
-    or some other manuall thing
-
-
-auto lock computer after a while
-
-
-ricing 
-    base16.nix 
-
-    nix-colors
-
-    stylix
-
-
-automated deployments? hydra?
-
-
-nushell
-
-
-posible change my_lib to lib.c (or smt similar)
-
-
-Lix? 
-    eg raf uses it
-    
-    or maybe just nix-super?
-
-
-the "full-installer" should probably be a recovery thing
-or an iso for servers 
-
-
-add a way to do only home-manager 
-
-
-https://github.com/cynicsketch/nix-mineral/blob/main/nix-mineral.nix
-
-
-Index the nixos server for better searching
-    https://github.com/Tyrrrz/DiscordChatExporter?tab=readme-ov-file
-
-
-Ignore whitspace in git diffs
 
 
 nvim 
@@ -132,3 +59,79 @@ nvim
     nixd (language server)
 
     quick fix buffer?
+
+
+ricing 
+    base16.nix 
+
+    nix-colors
+
+    stylix
+
+security 
+    nix-mineral 
+        general linux hardening
+
+        https://github.com/cynicsketch/nix-mineral/blob/main/nix-mineral.nix
+
+        do it when this mergers
+            https://github.com/cynicsketch/nix-mineral/pull/19
+
+    more declarative secrets
+        this guy has a lot: 
+            https://github.com/alyraffauf/nixcfg/tree/master/secrets
+
+
+    encrypted filesystem
+        LUKS
+
+    auto login?
+
+    ybikeys
+    
+    auto lock computer after a while
+        https://github.com/hyprwm/hypridle
+
+
+fix ethernet getting stuck on reconnect:
+  enp12s0: connecting (getting IP configuration) to Wired connection 1
+
+
+store firefox extension data?
+    since you cant set the settings declaritivly
+
+    add a command to place these into the repo?
+
+
+optimise for battery
+
+
+prelockd
+    prevent freezes in low ram senarios
+
+add pueued
+    ask lokegustafsson for his pkg
+    prevent freezes in low ram senarios
+
+
+himachi
+    for fake lan 
+
+    could probalby do this with homelab too
+
+    or some other manuall thing
+
+
+zoxide
+
+
+tmux
+
+
+nushell
+
+
+Ignore whitspace in git diffs
+
+
+
