--- a/TODO.txt
+++ b/TODO.txt
@@ -115,6 +115,9 @@ Change how lid switch is handeld?
     https://github.com/Aylur/dotfiles/blob/18b83b2d2c6ef2b9045edefe49a66959f93b358a/nixos/system.nix#L44
 
 
+sync this config with syncthing 
+
+
 hyprcursor 
 
 
