--- a/TODO.txt
+++ b/TODO.txt
@@ -62,10 +62,12 @@ security
         do it when this mergers
             https://github.com/cynicsketch/nix-mineral/pull/19
 
+            (actually submit a pr to refactor it)
+
     encrypted filesystem
         LUKS
 
-    auto login?
+        auto login?
 
     ybikeys
     
