update flake, refactored a bit, red color on low battery
info:
  Profile: upinix-laptop
  Gen: 45 -> 46
  NixOs: 24.11.20240821.c374d94
  Kernel: 6.10.6

--- a/TODO.txt
+++ b/TODO.txt
@@ -84,6 +84,10 @@ store firefox extension data?
 
 optimise for battery
 
+notification on low battery
+
+hybernate to prevent data loss instead of dying?
+
 
 prelockd
     prevent freezes in low ram senarios
@@ -122,4 +126,5 @@ nushell
 
 Fix home manager backing up .zsh/history (and possibly .zsh/known_hosts)
     maybe this happens when the files are changes?
+
 
