--- a/TODO.txt
+++ b/TODO.txt
@@ -128,3 +128,4 @@ Fix home manager backing up .zsh/history (and possibly .zsh/known_hosts)
     maybe this happens when the files are changes?
 
 
+add a commit hook for checking for secrets
