--- a/TODO.txt
+++ b/TODO.txt
@@ -101,13 +101,7 @@ Change how lid switch is handeld?
     https://github.com/Aylur/dotfiles/blob/18b83b2d2c6ef2b9045edefe49a66959f93b358a/nixos/system.nix#L44
 
 
-sync this config with syncthing 
-
-
-hyprcursor 
-
-
-zoxide
+sync this config with syncthing?
 
 
 tmux
@@ -118,6 +112,3 @@ nushell
 
 Fix home manager backing up .zsh/history (and possibly .zsh/known_hosts)
     maybe this happens when the files are changes?
-
-
-add a commit hook for checking for secrets
