--- a/TODO.txt
+++ b/TODO.txt
@@ -15,6 +15,10 @@ nix
         https://github.com/Tyrrrz/DiscordChatExporter?tab=readme-
 
 
+tldr 
+    short tldr for manpages with examples
+
+
 Virtulisation
     MAS
         free windows keys
