add a bunch of tools for apk rev to sec ds, - add nix-unfree alias alias "env NIXPKGS_ALLOW_UNFREE", - make the ds impure for the NIXPKGS_ALLOW_UNFREE flag - fix the commit msg parser in qs
info:
  Gen: 708 -> 709
  Kernel: 6.6.50
  NixOs: 24.11.20240911.4f807e8
  Profile: upinix-pc
  Type: manuall

--- a/TODO.txt
+++ b/TODO.txt
@@ -126,3 +126,5 @@ misc:
     https://github.com/facebook/sapling
 
     https://docs.google.com/document/d/1nnyByXcH0F6GOmEezNOUa2RFelpeRpDToBLYD_CtjWE/edit?pli=1
+
+    Schizosearch
