set correct refresh rate
info:
  Gen: 742 -> 743
  Kernel: 6.6.53
  NixOs: 24.11.20241004.bc947f5
  Profile: upinix-pc
  Type: manuall

--- a/TODO.txt
+++ b/TODO.txt
@@ -18,6 +18,8 @@ nix
 tldr 
     short tldr for manpages with examples
 
+use desktop files to create firefox base 
+    shortcut for firefox prfoile "base"
 
 Virtulisation
     MAS
