try to fix caddy
info:
  Gen: 750 -> 751
  Kernel: 6.6.53
  NixOs: 24.11.20241004.bc947f5
  Profile: upinix-pc
  Type: manuall

--- a/TODO.txt
+++ b/TODO.txt
@@ -15,6 +15,9 @@ nix
         https://github.com/Tyrrrz/DiscordChatExporter?tab=readme-
 
 
+host private pastebin
+
+
 tldr 
     short tldr for manpages with examples
 
