auto: pre rebuild commit [probably broken]
If you see this. Then the script failed to ammend it
i.e something broke during the update

add firefox base desktop file to quickly launch the base profile

info:
  Gen: 86 -> 86 ->
  Kernel: 6.11.1
  NixOs: 24.11.20241004.bc947f5
  Profile: upinix-laptop
  Type: pre-rebuild

--- a/TODO.txt
+++ b/TODO.txt
@@ -21,8 +21,6 @@ host private pastebin
 tldr 
     short tldr for manpages with examples
 
-use desktop files to create firefox base 
-    shortcut for firefox prfoile "base"
 
 Virtulisation
     MAS
@@ -50,6 +48,8 @@ Home lab
     vpn
 
     plex
+
+    paste bin
 
 
 nvim 
