worked backwards on what breaks nixd
info:
  Gen: 790 -> 791
  Kernel: 6.6.57
  NixOs: 24.11.20241018.4c2fcb0
  Profile: upinix-pc
  Type: manuall

--- a/TODO.txt
+++ b/TODO.txt
@@ -28,6 +28,8 @@ Virtulisation
     scripts to auto setup vm
 
 
+Use the "native" nixd editor config to reduce it down into the smallest parts 
+
 Home lab
     nas
         local share?
