fix image nvim, fix spelling underline color, show macro recording and cmdbuffer on lualine, remove nvf binds
info:
  Gen: 830 -> 831
  Kernel: 6.6.57
  NixOs: 24.11.20241018.4c2fcb0
  Profile: upinix-pc
  Type: manuall

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,7 +16,9 @@ nix
     Index the nixos server for better searching
         https://github.com/Tyrrrz/DiscordChatExporter?tab=readme-
 
-    
+   
+increase repeat speed for keyboard keys
+
 Virtulisation
     MAS
         free windows keys
