add a command to quick connect to my phones hotspot, and add nix-search-cli
info:
  Gen: 146 -> 147
  Kernel: 6.11.5
  NixOs: 24.11.20241025.18536bf
  Profile: upinix-laptop
  Type: manuall

--- a/TODO.txt
+++ b/TODO.txt
@@ -81,6 +81,10 @@ himachi
 
     or some other manual thing
 
+keyboard 
+    home row mods 
+
+    iso (english) layout
 
 Fix home manager backing up .zsh/history (and possibly .zsh/known_hosts)
     maybe this happens when the files are changes?
