--- a/TODO.txt
+++ b/TODO.txt
@@ -29,6 +29,8 @@ Virtulisation
     
     scripts to auto setup vm
 
+add a no-internet group
+    https://askubuntu.com/questions/45072/how-to-control-internet-access-for-each-program
 
 Home lab
     nas
@@ -85,6 +87,12 @@ keyboard
     home row mods 
 
     iso (english) layout
+
+
+start using tmux
+    (or maybe zellij)
+
+
 
 Fix home manager backing up .zsh/history (and possibly .zsh/known_hosts)
     maybe this happens when the files are changes?
