--- a/TODO.txt
+++ b/TODO.txt
@@ -16,7 +16,11 @@ nix
     Index the nixos server for better searching
         https://github.com/Tyrrrz/DiscordChatExporter?tab=readme-
 
-   
+ 
+add to btop config
+    #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
+    update_ms = 500
+
 Virtulisation
     MAS
         free windows keys
