--- a/TODO.txt
+++ b/TODO.txt
@@ -16,7 +16,9 @@ nix
     Index the nixos server for better searching
         https://github.com/Tyrrrz/DiscordChatExporter?tab=readme-
 
- 
+
+prevent the cursor showing upp in screenshots 
+
 Virtulisation
     MAS
         free windows keys
@@ -35,6 +37,7 @@ add a no-internet group
 
 prevent the cursor from showing upp in screenshots
 
+replace all "upidapi" with primaryUser or adminUser
 Home lab
     nas
         local share?
