revert to not use hardware clock in local time
info:
  Gen: 243 -> 244
  Kernel: 6.13.4
  NixOs: 25.05.20250227.6313551
  Profile: upinix-laptop
  Type: manuall

--- a/misc/TODO.txt
+++ b/misc/TODO.txt
@@ -17,6 +17,9 @@ ix
         https://github.com/Tyrrrz/DiscordChatExporter?tab=readme-
 
 
+start using bookmarks 
+    you can create folders and subfolders 
+
 Virtulisation
     MAS
         free windows keys
