open ports for azure func api
info:
  Gen: 259 -> 260
  Kernel: 6.13.6
  NixOs: 25.05.20250309.e3e32b6
  Profile: upinix-laptop
  Type: manuall

--- a/misc/TODO.txt
+++ b/misc/TODO.txt
@@ -90,3 +90,11 @@ himachi
 
 keyboard 
     iso (english) layout
+
+
+Investigate --offline mode 
+    it says it "disables substituters and considers all pre downloaded files as
+    up to data"
+
+    Why does it normally check ig files are up to date?
+        that should not be an issue if they are in the store
