update inputs, add ai cachix cache
info:
  Gen: 485 -> 486
  Kernel: 6.15.5
  NixOs: 25.11.20250708.9807714
  Profile: upinix-laptop
  Type: manuall

--- a/misc/TODO.txt
+++ b/misc/TODO.txt
@@ -22,6 +22,10 @@ Virtulisation
     
     scripts to auto setup vm
 
+SWAP space
+    nice for huge builds (cuda)
+    otherwise the computer no workie
+
 add a no-internet group
     https://askubuntu.com/questions/45072/how-to-control-internet-access-for-each-program
 
