feat: harden and work on ssh
- Add ssh keys for the minimal installer
- Dont allow ssh as root
- Add psw less sudo when sshing with keys

info:
  Gen: 3 -> 4
  Kernel: 6.15.5
  NixOs: 25.11.20250708.9807714
  Profile: upinix-laptop
  Type: manuall

--- a/misc/TODO.txt
+++ b/misc/TODO.txt
@@ -35,11 +35,12 @@ prevent the cursor from showing upp in screenshots
 
 replace all "upidapi" with primaryUser or adminUser
 
+
 Make a secrets.generator option to make it possible to generate secrets if 
 they dont exist
+    this is jsut clan.lol's "vars"
 
-
-make it so that i can deply to my pc without havin to push and pull changes
+send build and deploy logs and info to prometheus
 
 boost audio over 100%
 
