--- a/misc/TODO.txt
+++ b/misc/TODO.txt
@@ -20,12 +20,16 @@ save the commit info in the gen
     system.nixos.label / NIXOS_LABEL.
     https://www.reddit.com/r/NixOS/comments/w1jqd3/ive_made_some_changes_to_etcconfigurationnix/
 
+    maybe stop using qs
+
 Virtulisation
     Gpu passthrugh 
         https://discord.com/channels/568306982717751326/1257693396173328468/1257701485568065557
     
     scripts to auto setup vm
 
+    
+    
 SWAP space
     nice for huge builds (cuda)
     otherwise the computer no workie
